--- a/src/components/learningModule/Styles.scss
+++ b/src/components/learningModule/Styles.scss
@@ -14,11 +14,11 @@
         font-size: 1.5em;
     }
 
-    &__subHeader{
+    &__subHeader {
         @include subheader;
         min-height: 42px;
     }
-  
+
     &__answerArea {
         background-color: white;
         box-shadow: 0px 0px 20px -15px;
@@ -26,21 +26,26 @@
         border-radius: 10px;
         display: grid;
         justify-content: center;
+
         @media only screen and (max-width: $tablet) {
             border-radius: unset;
         }
-
     }
 
-    &__selections{ 
+    &__selections {
         padding: 30px 0;
         display: grid;
         grid-auto-flow: column;
         grid-gap: 10px;
+
+        @media only screen and (max-width: $tablet) {
+            grid-template-rows: 2fr 2fr;
+        }
     }
 
     &__submitButtonContainer {
         height: 50px;
+
         .submitButton {
             float: right;
         }
