feat: Remove the white container for the answers if  the screen size is 420px or less

--- a/src/components/learningModule/Styles.scss
+++ b/src/components/learningModule/Styles.scss
@@ -34,6 +34,11 @@
         @media only screen and (max-width: $tablet) {
             border-radius: unset;
         }
+
+        @media only screen and (max-width: $mobile) {
+            background-color: transparent;
+            box-shadow: 0px 0px 0px 0px;
+        }
     }
 
     &__selections {
