--- a/src/components/navbar/Styles.scss
+++ b/src/components/navbar/Styles.scss
@@ -1,24 +1,25 @@
-#navbarContainer{
+@import '../../styles/utils/breakpoints';
+
+#navbarContainer {
   height: 50px;
   background: black;
-}
 
-#navbarContent{
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-@media (max-width: 500px) {
-  #navbarContainer{
-    margin-bottom: 15px;
-  }
-}
-
-#navbarContainer{
-
-  img{
+  img {
     height: 30px;
     line-height: 40px;
     padding: 10px 15px;
   }
+
+  @media (max-width: 500px) {
+    margin-bottom: 15px;
+  }
+
+  @media only screen and (max-width: $mobile) {
+    text-align: center;
+  }
+}
+
+#navbarContent {
+  max-width: 800px;
+  margin: 0 auto;
 }
